@@ -305,6 +305,9 @@
 	Fixed some command-line cursor positioning issues related to non-printable
 	characters.
 
+	Fixed crash on starting command-line completion with Shift-Tab after
+	stopping on completion item with lower number during previous completion.
+
 0.7.8-beta to 0.7.8
 
 	Added ga and gA keys to visual mode.  Thanks to geo909.
